samples/_failures_safe/1761612147_8a4589_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_10b20d3f.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_10b20d3f.c:185:20: error: missing terminating " character
  185 |             printf("Vertex %d: %
      |                    ^~~~~~~~~~~~~
./samples/SAFE/__tmp_10b20d3f.c:185:13: error: expected expression at end of input
  185 |             printf("Vertex %d: %
      |             ^~~~~~
./samples/SAFE/__tmp_10b20d3f.c:185:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_10b20d3f.c:185:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_10b20d3f.c:185:13: error: expected declaration or statement at end of input
